--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,89 +8,24 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginTop="40dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
 
-        <Button
-            android:id="@+id/btnJugar"
+        <ImageView
+            android:id="@+id/iv_imagen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nuevo Juego"/>
+            android:src="@drawable/gato"/>
+
+        <TextView
+            android:id="@+id/txtv_contador"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:layout_marginTop="30dp"
+            android:textSize="35sp"/>
 
     </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
-
-        <Button
-            android:id="@+id/btn1"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:text=" "/>
-
-        <Button
-            android:id="@+id/btn2"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_toRightOf="@id/btn1"
-            android:text=" "/>
-
-        <Button
-            android:id="@+id/btn3"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_toRightOf="@+id/btn2"
-            android:text=" "/>
-
-        <Button
-            android:id="@+id/btn4"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_below="@+id/btn1"
-            android:text=" " />
-
-        <Button
-            android:id="@+id/btn5"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_toRightOf="@+id/btn4"
-            android:layout_below="@+id/btn2"
-            android:text=" "/>
-
-        <Button
-            android:id="@+id/btn6"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_toRightOf="@+id/btn5"
-            android:layout_below="@+id/btn3"
-            android:text=" "/>
-
-        <Button
-            android:id="@+id/btn7"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_below="@+id/btn4"
-            android:text=" "/>
-
-        <Button
-            android:id="@+id/btn8"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_toRightOf="@+id/btn7"
-            android:layout_below="@id/btn5"
-            android:text=" "/>
-
-        <Button
-            android:id="@+id/btn9"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_toRightOf="@+id/btn2"
-            android:layout_below="@+id/btn6"
-            android:text=" "/>
-
-    </RelativeLayout>
 
 </RelativeLayout>
