--- a/app/src/main/res/layout/activity_gato.xml
+++ b/app/src/main/res/layout/activity_gato.xml
@@ -22,7 +22,7 @@
     </LinearLayout>
 
     <RelativeLayout
-        android:id="@+id/juego"
+        android:id="@+id/rl_botones"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true">
@@ -108,7 +108,7 @@
         android:id="@+id/ganador"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/juego"
+        android:layout_below="@id/rl_botones"
         android:layout_marginTop="30dp"
         android:gravity="center"
         android:orientation="horizontal">
@@ -117,10 +117,10 @@
             android:id="@+id/txtv_victoriasJ1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="40dp"
             android:text="0"
             android:textColor="@color/colorRed"
-            android:textSize="40sp"
-            android:layout_marginRight="40dp"/>
+            android:textSize="40sp" />
 
         <TextView
             android:id="@+id/txtv_ganador"
@@ -132,10 +132,10 @@
             android:id="@+id/txtv_victoriasJ2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
             android:text="0"
             android:textColor="@color/colorBlue"
-            android:textSize="40sp"
-            android:layout_marginLeft="40dp"/>
+            android:textSize="40sp" />
 
     </LinearLayout>
 
